--- a/Portfolio 3 -  Admin Page/style.scss
+++ b/Portfolio 3 -  Admin Page/style.scss
@@ -41,6 +41,8 @@ main {
 
 .title {
   grid-area: 타이틀;
+  font-size: 35px;
+  margin: 0;
 }
 
 .card1,
@@ -50,13 +52,19 @@ main {
   border-radius: 5%;
   background-color: white;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  /* justify-content: center; */
+  /* align-content: flex-end; */
+  /* padding-right: 3%; */
+  /* padding-left: 3%; */
+  padding: 1% 5%;
+  box-shadow: 2px 2px 2px 2px lightgray;
+  
 }
 
 .card-left {
   flex-grow: 3;
-  padding: 8% 7%;
+  /* padding: 8% 7%; */
+  /* 이렇게 미니까 반응형 일시, 자꾸 밑으로 밀린다. */
 }
 
 .card-left > p {
@@ -73,11 +81,16 @@ main {
   flex-grow: 1;
   font-size: 3.1rem;
   color: gray;
-  padding: 16.2% 0%;
+  /* padding: 16.2% 0%; */
 }
 
 .card1 {
   grid-area: 카드1;
+}
+.card-itag{
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
 
 .card2 {
@@ -95,6 +108,7 @@ main {
 .chart {
   grid-area: 차트;
   background-color: white;
+  box-shadow: 2px 2px 2px 2px lightgray;
 }
 
 .chart h3 {
@@ -107,6 +121,7 @@ main {
 .tasks {
   grid-area: 테스크;
   background-color: white;
+  box-shadow: 2px 2px 2px 2px lightgray;
 }
 
 .task-container {
@@ -118,7 +133,7 @@ main {
   padding-left: 5%;
   background-color: rgba(211, 211, 211, 0.257);
   margin: 0;
-  padding-top: 5%;
+  padding-top: 4%;
   padding-bottom: 5%;
   height: 25%;
   font-size: 1.5rem;
@@ -142,14 +157,16 @@ main {
   border-radius: 20%;
   color: white;
   padding: 0% 3%;
+  display: flex;
+  align-items: center;
+}
+.task-number p {
+  margin: 0;
+  padding: 0;
 }
 
 .empty {
   grid-area: 빈공간;
-}
-
-h1 {
-  font-size: 35px;
 }
 
 .grid-container {
@@ -159,8 +176,4 @@ h1 {
   grid-template-rows: 7% 18.8% 34.1% 34.1%;
   grid-gap: 2%;
   grid-template-areas: "타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀" "카드1 카드1 카드2 카드2 카드3 카드3 카드4 카드4" "차트 차트 차트 차트 차트 테스크 테스크 테스크" "차트 차트 차트 차트 차트 빈공간 빈공간 빈공간";
-}
-
-// .grid-container > div {
-//   border: 5px solid black;
-// } 
+} 
