header 구현 완료 => nav 남음 + 모바일 사이즈 구현

--- a/Portfolio 3 -  Admin Page/style.css
+++ b/Portfolio 3 -  Admin Page/style.css
@@ -17,9 +17,48 @@ body {
 header {
   width: 96%;
   height: 8%;
-  border: 5px solid blue;
   float: right;
   background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 1%;
+}
+
+.search {
+  display: flex;
+  width: 30%;
+  height: 80%;
+}
+
+.search input {
+  width: 50%;
+  transition: all 1s;
+  border-radius: 3px;
+}
+
+.search input:focus {
+  width: 100%;
+}
+
+.search-itag {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  padding: 3%;
+  color: white;
+  border-radius: 3px;
+}
+
+.header-right {
+  display: flex;
+}
+
+.header-right > div,
+.header-right > p {
+  margin: 0px 10px;
+  color: gray;
+  font-size: 1.2rem;
 }
 
 nav {
@@ -52,18 +91,12 @@ main {
   border-radius: 5%;
   background-color: white;
   display: flex;
-  /* justify-content: center; */
-  /* align-content: flex-end; */
-  /* padding-right: 3%; */
-  /* padding-left: 3%; */
   padding: 1% 5%;
   box-shadow: 2px 2px 2px 2px lightgray;
 }
 
 .card-left {
   flex-grow: 3;
-  /* padding: 8% 7%; */
-  /* 이렇게 미니까 반응형 일시, 자꾸 밑으로 밀린다. */
 }
 
 .card-left > p {
@@ -80,7 +113,6 @@ main {
   flex-grow: 1;
   font-size: 3.1rem;
   color: gray;
-  /* padding: 16.2% 0%; */
 }
 
 .card1 {
@@ -90,7 +122,6 @@ main {
 .card-itag {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
 }
 
 .card2 {
@@ -154,7 +185,7 @@ main {
 
 .task-number {
   background-color: blue;
-  border-radius: 20%;
+  border-radius: 30%;
   color: white;
   padding: 0% 3%;
   display: flex;
