--- a/Portfolio 3 -  Admin Page/style.css
+++ b/Portfolio 3 -  Admin Page/style.css
@@ -48,6 +48,7 @@ header {
   padding: 3%;
   color: white;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 .header-right {
@@ -65,10 +66,52 @@ nav {
   float: left;
   width: 4%;
   height: 100vh;
-  border: 5px solid green;
   padding: 0;
   margin: 0;
   background-color: blue;
+  position: fixed;
+  transition: all 1s;
+}
+
+nav:hover{
+  width: 12.4%;
+  display: flex;
+  justify-content: center;
+
+}
+
+nav:hover .nav-list p{
+  transform: translateX(0px);
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+nav:hover .nav-container{
+  margin-left: 0;
+}
+
+
+.nav-container {
+  color: white;
+  margin-top: 10px;
+  margin-left: 30%;
+
+}
+
+.nav-list{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.nav-list i{
+  margin-right: 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.nav-list p {
+  transform: translateX(-150px);
 }
 
 main {
@@ -185,9 +228,9 @@ main {
 
 .task-number {
   background-color: blue;
-  border-radius: 30%;
+  border-radius: 80px;
   color: white;
-  padding: 0% 3%;
+  padding: 0% 5%;
   display: flex;
   align-items: center;
 }
@@ -208,4 +251,4 @@ main {
   grid-template-rows: 7% 18.8% 34.1% 34.1%;
   grid-gap: 2%;
   grid-template-areas: "타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀" "카드1 카드1 카드2 카드2 카드3 카드3 카드4 카드4" "차트 차트 차트 차트 차트 테스크 테스크 테스크" "차트 차트 차트 차트 차트 빈공간 빈공간 빈공간";
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
