--- a/Portfolio 3 -  Admin Page/style.css
+++ b/Portfolio 3 -  Admin Page/style.css
@@ -35,6 +35,9 @@ header {
   width: 50%;
   transition: all 1s;
   border-radius: 3px;
+  border-top: 2px solid lightgray;
+  border-left: 2px solid lightgray;
+  border-bottom: 2px solid lightgray;
 }
 
 .search input:focus {
@@ -73,38 +76,35 @@ nav {
   transition: all 1s;
 }
 
-nav:hover{
+nav:hover {
   width: 12.4%;
   display: flex;
   justify-content: center;
-
 }
 
-nav:hover .nav-list p{
+nav:hover .nav-list p {
   transform: translateX(0px);
   transition: all 0.5s;
   cursor: pointer;
 }
 
-nav:hover .nav-container{
+nav:hover .nav-container {
   margin-left: 0;
 }
-
 
 .nav-container {
   color: white;
   margin-top: 10px;
   margin-left: 30%;
-
 }
 
-.nav-list{
+.nav-list {
   display: flex;
   justify-content: left;
   align-items: center;
 }
 
-.nav-list i{
+.nav-list i {
   margin-right: 10px;
   font-size: 1.5rem;
   cursor: pointer;
@@ -160,6 +160,7 @@ main {
 
 .card1 {
   grid-area: 카드1;
+  border-left: 4px solid skyblue;
 }
 
 .card-itag {
@@ -169,14 +170,17 @@ main {
 
 .card2 {
   grid-area: 카드2;
+  border-left: 4px solid yellow;
 }
 
 .card3 {
   grid-area: 카드3;
+  border-left: 4px solid blue;
 }
 
 .card4 {
   grid-area: 카드4;
+  border-left: 4px solid orange;
 }
 
 .chart {
@@ -251,4 +255,6 @@ main {
   grid-template-rows: 7% 18.8% 34.1% 34.1%;
   grid-gap: 2%;
   grid-template-areas: "타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀 타이틀" "카드1 카드1 카드2 카드2 카드3 카드3 카드4 카드4" "차트 차트 차트 차트 차트 테스크 테스크 테스크" "차트 차트 차트 차트 차트 빈공간 빈공간 빈공간";
-} /*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map *//*# sourceMappingURL=style.css.map */
