--- a/Portfolio 3 -  Admin Page/style.css
+++ b/Portfolio 3 -  Admin Page/style.css
@@ -23,6 +23,8 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0px 1%;
+  box-shadow: 0px 2px 0px 1px lightgray;
+  margin-bottom: 10px;
 }
 
 .search {
