--- a/Portfolio 3 -  Admin Page/style.scss
+++ b/Portfolio 3 -  Admin Page/style.scss
@@ -23,6 +23,9 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0px 1%;
+  box-shadow: 0px 2px 0px 1px lightgray;
+  // 이 부분은 문제 생기면, 지우자
+  margin-bottom: 10px;
 }
 
 .search {
