--- a/Portfolio 3 -  Admin Page/style.scss
+++ b/Portfolio 3 -  Admin Page/style.scss
@@ -32,6 +32,8 @@ header {
   display: flex;
   width: 30%;
   height: 80%;
+  // transform: translateX(10px);
+
 }
 
 .search input {
@@ -56,8 +58,7 @@ header {
   border-radius: 3px;
   cursor: pointer;
 }
-
-.for-md {
+.outer-for-md{
   display: none;
 }
 
@@ -269,31 +270,44 @@ main {
   header .header-right {
     display: none;
   }
-  .for-md {
+
+  .outer-for-md{
+    appearance: none;
     display: block;
-    // float: right;
+    display: flex;
+    justify-content: right;
+    float: right;
+    width: 100%;
+    transform: translateX(-40px);
+  }
+
+  .for-md {
     border: 2px solid lightgray;
-    padding: 5px 8px;
+    padding: 5px 14px;
     font-size: 1.5rem;
     cursor: pointer;
   }
 
   nav {
     grid-area: 나브;
-    position: static;
-    width: 5%;
+    width: 8%;
+    padding-right: 1%;
     height: 100vh;
+    z-index: 1;
   }
   nav:hover{
-    position: fixed;
+    width: 20%;
   }
 
   header{
     grid-area: 헤더;
-    // margin: 0;
+    width: 100%;
+    float: left;
   }
   .grid-container {
+    transform: translateX(40px);
     height: 100%;
+    width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px 150px 150px 150px 150px 400px 250px 100px;
