--- a/Portfolio 3 -  Admin Page/style.css
+++ b/Portfolio 3 -  Admin Page/style.css
@@ -36,7 +36,8 @@ header {
 .search input {
   width: 50%;
   transition: all 1s;
-  border-radius: 3px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   border-top: 2px solid lightgray;
   border-left: 2px solid lightgray;
   border-bottom: 2px solid lightgray;
@@ -52,8 +53,9 @@ header {
   align-items: center;
   padding: 3%;
   color: white;
-  border-radius: 3px;
   cursor: pointer;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .outer-for-md {
