--- a/움직이는 캐릭터 클릭으로 지워보기/style.css
+++ b/움직이는 캐릭터 클릭으로 지워보기/style.css
@@ -25,10 +25,10 @@ body {
 }
 
 img {
-    /* display: block; */
+  /* display: block; */
   animation-name: 움찔움찔;
   animation-duration: 7s;
   animation-timing-function: linear;
-  animation-delay: 1s;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
